# serializer version: 1
# name: test_select[select.ceiling_hood_fan_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BOOST',
        'BREEZE',
        'OFF',
        'STEP_1',
        'STEP_2',
        'STEP_3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.ceiling_hood_fan_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan level',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_level',
    'unique_id': '999008105_00:99010299-443E074B7A6E_fan_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.ceiling_hood_fan_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ceiling Hood Fan level',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BOOST',
        'BREEZE',
        'OFF',
        'STEP_1',
        'STEP_2',
        'STEP_3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.ceiling_hood_fan_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OFF',
  })
# ---
# name: test_select[select.dryer_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BED_LINEN_PLUS_PR_BEDDINGPLUS',
        'COTTON_PR_COTTONS',
        'COTTON_PR_ENERGYSAVER',
        'DRY_CLEANING_PR_REFRESH',
        'DUVET_PR_DUVET',
        'EXTRA_DELICATE_PR_DELICATES',
        'JEANS_PR_DENIM',
        'OUTD_PROOF_PR_OUTDOOR',
        'SILK_DRY_PR_SILK',
        'SPORTS_PR_SPORT',
        'SYNTHETIC_PR_SYNTHETICS',
        'TIMEDRY_PR_DRYINGRACK',
        'UNIVERSAL_PR_MIXEDPLUSNOTXL',
        'WOOL_GOLD_PR_WOOL',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.dryer_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program',
    'unique_id': '999120000_00:74852244-443E0704101F_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.dryer_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BED_LINEN_PLUS_PR_BEDDINGPLUS',
        'COTTON_PR_COTTONS',
        'COTTON_PR_ENERGYSAVER',
        'DRY_CLEANING_PR_REFRESH',
        'DUVET_PR_DUVET',
        'EXTRA_DELICATE_PR_DELICATES',
        'JEANS_PR_DENIM',
        'OUTD_PROOF_PR_OUTDOOR',
        'SILK_DRY_PR_SILK',
        'SPORTS_PR_SPORT',
        'SYNTHETIC_PR_SYNTHETICS',
        'TIMEDRY_PR_DRYINGRACK',
        'UNIVERSAL_PR_MIXEDPLUSNOTXL',
        'WOOL_GOLD_PR_WOOL',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dryer_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'SILK_DRY_PR_SILK',
  })
# ---
# name: test_select[select.fenix_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'AIR_SOUS_VIDE',
        'BOTTOM',
        'BREAD_STEAMED',
        'CHEESE_BREAD_AIRFRY',
        'CHIPS_AIRFRY',
        'CONVENTIONAL_COOKING',
        'DIRECT_STEAM_REGENERATE',
        'DIRECT_STEAM_STEAM_BAKE',
        'DOUGH_PROVING',
        'DRYING',
        'FROZEN_FOOD',
        'FROZEN_FRENCH_FRIES_AIRFRY',
        'GRILL',
        'GRILL_FAN',
        'KEEP_WARM',
        'MANUAL_AIRFRY',
        'MEAT_AND_FISH_STEAMED',
        'NUGGETS_AIRFRY',
        'PASTA_AND_PIZZA_STEAMED',
        'PIES_AND_CAKES_STEAMED',
        'PIZZA',
        'POTATO_NATURA_AIRFRY',
        'SLOW_COOK',
        'TRUE_FAN',
        'VEGETABLES_STEAMED',
        'WATER_BATH',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.fenix_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program',
    'unique_id': '900412569_00:43319382-443E0748CCD4_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.fenix_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Fenix Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'AIR_SOUS_VIDE',
        'BOTTOM',
        'BREAD_STEAMED',
        'CHEESE_BREAD_AIRFRY',
        'CHIPS_AIRFRY',
        'CONVENTIONAL_COOKING',
        'DIRECT_STEAM_REGENERATE',
        'DIRECT_STEAM_STEAM_BAKE',
        'DOUGH_PROVING',
        'DRYING',
        'FROZEN_FOOD',
        'FROZEN_FRENCH_FRIES_AIRFRY',
        'GRILL',
        'GRILL_FAN',
        'KEEP_WARM',
        'MANUAL_AIRFRY',
        'MEAT_AND_FISH_STEAMED',
        'NUGGETS_AIRFRY',
        'PASTA_AND_PIZZA_STEAMED',
        'PIES_AND_CAKES_STEAMED',
        'PIZZA',
        'POTATO_NATURA_AIRFRY',
        'SLOW_COOK',
        'TRUE_FAN',
        'VEGETABLES_STEAMED',
        'WATER_BATH',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fenix_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select[select.peacock_hob_hood_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BOOST',
        'BREEZE',
        'DRYING_CYCLE',
        'OFF',
        'STEP_1',
        'STEP_2',
        'STEP_3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.peacock_hob_hood_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hood fan speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hood fan speed',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_fan_speed',
    'unique_id': '999008120_00:99907833-443E073D986E_hood_fan_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.peacock_hob_hood_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Hood fan speed',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BOOST',
        'BREEZE',
        'DRYING_CYCLE',
        'OFF',
        'STEP_1',
        'STEP_2',
        'STEP_3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.peacock_hob_hood_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OFF',
  })
# ---
# name: test_select[select.peacock_hob_hood_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'AUTOMATIC',
        'MANUAL',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.peacock_hob_hood_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hood state',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hood state',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'hood_state',
    'unique_id': '999008120_00:99907833-443E073D986E_hood_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.peacock_hob_hood_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peacock hob Hood state',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'AUTOMATIC',
        'MANUAL',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.peacock_hob_hood_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'MANUAL',
  })
# ---
# name: test_select[select.pux_pizza_oven_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ASSIST_PIZZA_EXPERT_REHEAT',
        'AUGRATIN',
        'BAKE_TRUE_FAN',
        'BOTTOM',
        'BREAD_BAKING',
        'CONVENTIONAL_COOKING',
        'DEFROST',
        'DOUGH_PROVING',
        'DRYING',
        'FROZEN_FOOD',
        'GRILL',
        'GRILL_FAN',
        'KEEP_WARM',
        'MOIST_FAN_BAKING',
        'PIZZA_EXPERT_EXTENSION',
        'PIZZA_EXPERT_MAIN',
        'PIZZA_EXPERT_PREHEAT',
        'PLATE_WARMING',
        'PRESERVING',
        'PYRO_CLEAN_INTENSE',
        'PYRO_CLEAN_LIGHT',
        'PYRO_CLEAN_NORMAL',
        'SLOW_COOK',
        'TRUE_FAN',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.pux_pizza_oven_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'program',
    'unique_id': '949288049_00:11112225-443E076A37D6_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.pux_pizza_oven_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'PUX pizza oven Program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'ASSIST_PIZZA_EXPERT_REHEAT',
        'AUGRATIN',
        'BAKE_TRUE_FAN',
        'BOTTOM',
        'BREAD_BAKING',
        'CONVENTIONAL_COOKING',
        'DEFROST',
        'DOUGH_PROVING',
        'DRYING',
        'FROZEN_FOOD',
        'GRILL',
        'GRILL_FAN',
        'KEEP_WARM',
        'MOIST_FAN_BAKING',
        'PIZZA_EXPERT_EXTENSION',
        'PIZZA_EXPERT_MAIN',
        'PIZZA_EXPERT_PREHEAT',
        'PLATE_WARMING',
        'PRESERVING',
        'PYRO_CLEAN_INTENSE',
        'PYRO_CLEAN_LIGHT',
        'PYRO_CLEAN_NORMAL',
        'SLOW_COOK',
        'TRUE_FAN',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.pux_pizza_oven_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_select[select.supex_oven_upper_cavity_program-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BAKE',
        'BAKE_BROIL',
        'BAKE_BROIL_FAN',
        'BAKE_TRUE_FAN',
        'BROIL',
        'BROIL_FAN',
        'FULL_STEAM',
        'GUIDED_AIRFRY',
        'GUIDED_AIRFRY_PLUS',
        'GUIDED_BAKE_BREAD',
        'GUIDED_BAKE_CAKE_MULTIPLE',
        'GUIDED_BAKE_CAKE_SINGLE',
        'GUIDED_BAKE_QUICHE_AND_PIZZA',
        'GUIDED_BAKE_READY_TO_BAKE',
        'GUIDED_DEFROST_BREAD_AND_BAKERY',
        'GUIDED_DEFROST_FRUIT_AND_VEGETABLES',
        'GUIDED_DEFROST_MEAT_FISH_POULTRY',
        'GUIDED_DEHYDRATE',
        'GUIDED_DOUGH_PROVE',
        'GUIDED_GRILL_THICK',
        'GUIDED_GRILL_THIN',
        'GUIDED_KEEP_WARM',
        'GUIDED_PLATE_WARM',
        'GUIDED_PRESERVE',
        'GUIDED_REFRESH',
        'GUIDED_REHEAT_CRISP',
        'GUIDED_REHEAT_MOIST',
        'GUIDED_ROAST_MEAT_MEDIUM',
        'GUIDED_ROAST_MEAT_WELL_DONE',
        'GUIDED_ROAST_VEGETABLES',
        'GUIDED_SLOW_COOK',
        'GUIDED_SOUS_VIDE',
        'GUIDED_STANDARD_COOKING_FROZEN',
        'GUIDED_STANDARD_FRESH_MULTIPLE',
        'GUIDED_STANDARD_FRESH_SINGLE',
        'GUIDED_STEAM',
        'GUIDED_STEW_CLOSED_CONTAINER',
        'GUIDED_STEW_OPEN_CONTAINER',
        'MOIST_FAN_BAKING',
        'STEAMIFY',
        'STEAM_CLEAN_DESCALE',
        'STEAM_CLEAN_INTENSE',
        'STEAM_CLEAN_LIGHT',
        'STEAM_HIGH',
        'STEAM_LOW',
        'STEAM_MEDIUM',
        'STEAM_SYSTEM_CLEAN_DRY',
        'STEAM_SYSTEM_CLEAN_RINSE',
        'TRUE_FAN',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.supex_oven_upper_cavity_program',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper cavity program',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Upper cavity program',
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upperoven_program',
    'unique_id': '944035064_00:27032025-443E073D97B2_upperoven_program',
    'unit_of_measurement': None,
  })
# ---
# name: test_select[select.supex_oven_upper_cavity_program-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Supex oven Upper cavity program',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'BAKE',
        'BAKE_BROIL',
        'BAKE_BROIL_FAN',
        'BAKE_TRUE_FAN',
        'BROIL',
        'BROIL_FAN',
        'FULL_STEAM',
        'GUIDED_AIRFRY',
        'GUIDED_AIRFRY_PLUS',
        'GUIDED_BAKE_BREAD',
        'GUIDED_BAKE_CAKE_MULTIPLE',
        'GUIDED_BAKE_CAKE_SINGLE',
        'GUIDED_BAKE_QUICHE_AND_PIZZA',
        'GUIDED_BAKE_READY_TO_BAKE',
        'GUIDED_DEFROST_BREAD_AND_BAKERY',
        'GUIDED_DEFROST_FRUIT_AND_VEGETABLES',
        'GUIDED_DEFROST_MEAT_FISH_POULTRY',
        'GUIDED_DEHYDRATE',
        'GUIDED_DOUGH_PROVE',
        'GUIDED_GRILL_THICK',
        'GUIDED_GRILL_THIN',
        'GUIDED_KEEP_WARM',
        'GUIDED_PLATE_WARM',
        'GUIDED_PRESERVE',
        'GUIDED_REFRESH',
        'GUIDED_REHEAT_CRISP',
        'GUIDED_REHEAT_MOIST',
        'GUIDED_ROAST_MEAT_MEDIUM',
        'GUIDED_ROAST_MEAT_WELL_DONE',
        'GUIDED_ROAST_VEGETABLES',
        'GUIDED_SLOW_COOK',
        'GUIDED_SOUS_VIDE',
        'GUIDED_STANDARD_COOKING_FROZEN',
        'GUIDED_STANDARD_FRESH_MULTIPLE',
        'GUIDED_STANDARD_FRESH_SINGLE',
        'GUIDED_STEAM',
        'GUIDED_STEW_CLOSED_CONTAINER',
        'GUIDED_STEW_OPEN_CONTAINER',
        'MOIST_FAN_BAKING',
        'STEAMIFY',
        'STEAM_CLEAN_DESCALE',
        'STEAM_CLEAN_INTENSE',
        'STEAM_CLEAN_LIGHT',
        'STEAM_HIGH',
        'STEAM_LOW',
        'STEAM_MEDIUM',
        'STEAM_SYSTEM_CLEAN_DRY',
        'STEAM_SYSTEM_CLEAN_RINSE',
        'TRUE_FAN',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.supex_oven_upper_cavity_program',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'STEAMIFY',
  })
# ---
